--- a/Constants.css
+++ b/Constants.css
@@ -3,6 +3,6 @@
 --background-element2:url(Elements/sun\ background2\ white.svg);
 }
 .lightmode{
---background-element1:url(Elements/star\ background1\ purple.svg.svg);
---background-element2:url(Elements/sun\ background2\ purple.svg.svg);
+--background-element1:url(Elements/star\ background1\ purple.svg);
+--background-element2:url(Elements/sun\ background2\ purple.svg);
 }
